@@ -32,6 +32,7 @@
 * Auto-promotions can now apply to users with no account (one is auto-created)
 * Fixed a bug with greetings for users with #x in their logon handle
 * Moved the AP logic before the greeting
+* Making better use of ChatQueue priority
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
